# 42hz-hardware-sbc-config

./: .copier-answers.yml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  42hz-hardware-sbc-config.code-workspace  COPIER_README.md  README.md  pyproject.toml
.cursor/: hooks.json
.cursor/hooks/: check-dev-env.sh
.cursor/rules/: aws-iot-avoid-deprecated.mdc  cdk-aws-metadata-strings.mdc  doc-create.mdc  python-syntax.mdc
.cursor/skills/cli-structure/: SKILL.md
.cursor/skills/doc-create/: SKILL.md
.cursor/skills/doc-upsert/: SKILL.md
.cursor/skills/git-commit-code/: SKILL.md
.cursor/skills/git-create-feature-branch/: SKILL.md
.cursor/skills/git-merge-main/: SKILL.md
.cursor/skills/greengrass-local-dev/: SKILL.md
.cursor/skills/infra-cdk/: SKILL.md
.devcontainer/: Dockerfile  aws-config.example  configure_git.py  devcontainer.json  env.local.sample  install-aws-cli.sh  post-create.sh
.oh-my-zsh-custom/: aws.zsh  git.zsh  node.zsh  prompt.zsh  zsh.zsh
components/hello-greengrass/: recipe.yaml
components/telemetry-publisher/: recipe.yaml
components/telemetry-publisher-docker/: recipe.yaml
docs/: README.md  SBCC-INFRA-0001-iot-hello-world-cdk.md  SBCC-INFRA-0002-iot-core-network-it-briefing.md  SBCC-INFRA-0003-greengrass-local-dev-loop.md
imaging/: pinned_release.yaml
imaging/releases/: index.yaml  trixie-2026-04-21-lite-arm64.yaml
infra/cdk/: .gitignore  README.md  app.py  cdk.context.example.json  cdk.json
infra/cdk/lambda/provision_device/: __init__.py  (+1 more)
infra/cdk/stacks/: __init__.py  iot_hello_stack.py
infra/docker/greengrass-telemetry/: Dockerfile  README.md  publisher.py  save-artifact.sh
infra/docker/iot-runner/: .env.example  Dockerfile  README.md  compose.yaml  entrypoint.sh
sbc_config/: __init__.py  cli.py  utils.py
sbc_config/commands/: __init__.py
sbc_config/commands/hello/: __init__.py  greet.py
sbc_config/commands/imaging/: __init__.py  customize.py  feedback.py  fetch.py  flash.py  prepare.py
sbc_config/commands/iot/: __init__.py  add_pi_ssh_key.py  decommission_thing.py  describe_endpoint.py  fetch_credentials.py  install_greengrass.py  install_pi_docker.py  list_orphan_certs.py  mqtt_test.py  sync_to_pi.py
sbc_config/modules/: __init__.py
sbc_config/modules/hello/: __init__.py  greeting.py
sbc_config/modules/imaging/: __init__.py  catalog.py  customize.py  fetch.py  flash.py  paths.py  release_spec.py  types.py
sbc_config/modules/iot/: __init__.py  client.py  credentials.py  defaults.py  endpoint.py  greengrass_install.py  lifecycle.py  mqtt5.py  pi_docker_install.py  pi_ssh_authorize.py  pi_sync.py
tests/: test_greengrass_install.py  test_imaging.py  test_iot_defaults.py  test_iot_hello_stack.py  test_iot_lifecycle.py  test_iot_pi_docker_install.py  test_iot_pi_runner.py  test_iot_pi_ssh_authorize.py
(+5 files in other folders)
