[project]
name = "sbc-config"
version = "0.1.0"
description = "SBC Config — hardware domain"
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "42hz.ai Engineering", email = "tim@42hz.ai" },
]
dependencies = [
  "click>=8.2.1",
  "rich>=13.7.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "PyYAML>=6.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
lint = ["ruff>=0.5.3", "mypy>=1.0.0"]
dev = ["pre-commit>=3.0.0", "ruff>=0.5.3"]
notion = ["notion-client>=3.0.0"]

[project.scripts]
sbc = "sbc_config.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sbc_config"]

# Development tool configuration

[tool.ruff]
target-version = "py314"
lint.select = [
  "F",
  "E",
  "N",
  "S",
  "C4",
  "G",
  "T20",
  "PTH",
  "PL",
  "RUF",
]
lint.ignore = [
  "S101",
  "S603",
  "S607",
  "PTH123",
  "PLR2004",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "RUF012",
  "E501",
]

[tool.ruff.lint.isort]
lines-between-types = 1
